# synapse

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  HEARTBEAT.md  PLAN-DASHBOARD-REDESIGN.md  PLAN-MULTI-AGENT.md  PLAN-USAGE-TRACKING.md  README.md  TOOLS.md  USER.md  start.sh  synapse.toml.example  synaptic.toml.example
.github/workflows/: ci.yml
Formula/: synapse.rb
crates/synapse-cache/: Cargo.toml
crates/synapse-embeddings/: Cargo.toml
crates/synapse-embeddings/src/: cached.rs  fake.rs  lib.rs  ollama.rs  openai.rs
crates/synapse-embeddings/tests/: cached.rs  fake.rs  ollama.rs  openai.rs
crates/synapse-graph/: Cargo.toml
crates/synapse-loaders/: Cargo.toml
crates/synapse-loaders/src/: csv_loader.rs  directory_loader.rs  file_loader.rs  json_loader.rs  lib.rs  markdown_loader.rs  text_loader.rs  web_loader.rs
crates/synapse-loaders/tests/: csv_loader.rs  directory_loader.rs  file_loader.rs  json_loader.rs  lazy_load.rs  markdown_loader.rs  text_loader.rs  web_loader.rs
crates/synapse-parsers/: Cargo.toml
crates/synapse-prompts/: Cargo.toml
crates/synapse-runnables/: Cargo.toml
crates/synapse-runnables/src/: branch.rs  each.rs  fallback.rs  generator.rs  lambda.rs  lib.rs  parallel.rs  passthrough.rs  retry.rs  runnable.rs  sequence.rs
crates/synapse-runnables/tests/: branch.rs  fallback.rs  identity.rs  lambda.rs  parallel.rs  sequence.rs
crates/synapse-splitters/: Cargo.toml
crates/synapse-splitters/src/: character.rs  html_header.rs  language.rs  lib.rs  markdown.rs  recursive.rs
crates/synapse-splitters/tests/: character.rs  html_header.rs  language.rs  markdown.rs  recursive.rs
crates/synapse-vectorstores/: Cargo.toml
crates/synapse-vectorstores/src/: in_memory.rs  lib.rs  multi_vector.rs
crates/synapse-vectorstores/tests/: in_memory.rs
crates/synaptic-bedrock/: Cargo.toml
crates/synaptic-bedrock/src/: chat_model.rs  lib.rs
crates/synaptic-bedrock/tests/: chat_model.rs
crates/synaptic-callbacks/: Cargo.toml
crates/synaptic-callbacks/src/: composite.rs  lib.rs  stdout.rs  tracing_cb.rs
crates/synaptic-callbacks/tests/: callbacks_extended.rs  composite.rs
crates/synaptic-cohere/: Cargo.toml
crates/synaptic-cohere/src/: lib.rs  reranker.rs
crates/synaptic-cohere/tests/: reranker.rs
crates/synaptic-condenser/: Cargo.toml
crates/synaptic-condenser/src/: lib.rs  llm_summarizing.rs  middleware.rs  noop.rs  pipeline.rs  rolling.rs  token_budget.rs
crates/synaptic-condenser/tests/: condenser.rs
crates/synaptic-config/: Cargo.toml
crates/synaptic-config/src/: format.rs  lib.rs  mcp.rs  model.rs  paths.rs  source.rs  tools.rs
crates/synaptic-config/tests/: config.rs  format.rs  source.rs
crates/synaptic-deep/: Cargo.toml
crates/synaptic-deep/src/: builder.rs  lib.rs
crates/synaptic-deep/src/backend/: filesystem.rs  mod.rs  state.rs  store.rs
crates/synaptic-deep/src/middleware/: filesystem.rs  memory.rs  mod.rs  patch_tool_calls.rs  skills.rs  subagent.rs  summarization.rs
crates/synaptic-deep/src/tools/: mod.rs
crates/synaptic-deep/tests/: backend_state.rs  builder.rs  create_deep_agent_options.rs  filesystem_mw.rs  integration.rs  memory.rs  patch_tool_calls.rs  skills.rs  store_backend.rs  subagent.rs  tools.rs
crates/synaptic-lark/: Cargo.toml
crates/synaptic-lark/src/: auth.rs  lib.rs
crates/synaptic-lark/src/api/: bitable.rs  cardkit.rs  message.rs  mod.rs
crates/synaptic-lark/src/bot/: client.rs  mod.rs  streaming.rs
crates/synaptic-lark/src/events/: listener.rs  mod.rs  verify.rs
crates/synaptic-lark/src/loaders/: bitable.rs  doc.rs  mod.rs
crates/synaptic-lark/src/store/: cache.rs  checkpointer.rs  memory.rs  mod.rs
crates/synaptic-lark/src/tools/: bitable.rs  message.rs  mod.rs
crates/synaptic-lark/tests/: bitable_tool_test.rs  doc_loader_test.rs  event_verify_test.rs  message_tool_test.rs  streaming_test.rs
crates/synaptic-memory/: Cargo.toml
crates/synaptic-memory/src/: buffer.rs  file_history.rs  history.rs  lib.rs  store_memory.rs  summary.rs  summary_buffer.rs  token_buffer.rs  window.rs
crates/synaptic-memory/tests/: buffer.rs  history.rs  store_memory.rs  summary.rs  summary_buffer.rs  summary_buffer_edge.rs  token_buffer.rs  window.rs  window_edge.rs
crates/synaptic-mongodb/: Cargo.toml
crates/synaptic-mongodb/src/: lib.rs  vector_store.rs
crates/synaptic-mongodb/tests/: vector_store.rs
crates/synaptic-secrets/: Cargo.toml
crates/synaptic-secrets/src/: lib.rs  middleware.rs  registry.rs
crates/synaptic-secrets/tests/: secrets.rs
crates/synaptic-session/: Cargo.toml
crates/synaptic-session/src/: lib.rs  store_session.rs
crates/synaptic-session/tests/: store_session.rs
crates/synaptic-splitters/: Cargo.toml
crates/synaptic-splitters/tests/: edge_cases.rs
crates/synaptic-sqlite/: Cargo.toml
crates/synaptic-sqlite/src/: cache.rs  lib.rs  store.rs  vectorstore.rs
crates/synaptic-sqlite/tests/: cache.rs  store.rs  vectorstore.rs
docs/: ROADMAP.md
examples/: README.md
examples/condenser_demo/: Cargo.toml
examples/condenser_demo/src/: main.rs
examples/file_persistence/: Cargo.toml
examples/file_persistence/src/: main.rs
examples/graph_visualization/: Cargo.toml
examples/graph_visualization/src/: main.rs
examples/lark_streaming_bot/: Cargo.toml
examples/lark_streaming_bot/src/: main.rs
examples/macros_showcase/: Cargo.toml
examples/macros_showcase/src/: main.rs
examples/security_demo/: Cargo.toml
examples/security_demo/src/: main.rs
examples/tool_filter_demo/: Cargo.toml
examples/tool_filter_demo/src/: main.rs
examples/volcengine_test/: Cargo.toml
examples/volcengine_test/src/: main.rs
scripts/: publish.sh
src/: broadcast.rs  cli.rs  display.rs  doctor.rs  error.rs  init.rs  logging.rs  main.rs  notify.rs  otel.rs  plugin.rs  router.rs  scheduler.rs  service.rs  task.rs  tui.rs  tunnel.rs  usage.rs  voice.rs  workflow.rs
web/: BOOTSTRAP.md  IDENTITY.md  SOUL.md  USER.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
(+1126 files in other folders)
