[package]
name = "synapse-loaders"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
async-stream.workspace = true
csv.workspace = true
futures.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
synapse-core = { path = "../synapse-core" }
synapse-retrieval = { path = "../synapse-retrieval" }

[dev-dependencies]
tokio.workspace = true
futures.workspace = true
