[package]
name = "synapse-runnables"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
async-stream.workspace = true
futures.workspace = true
serde_json.workspace = true
synapse-core = { path = "../synapse-core" }

[dev-dependencies]
tokio.workspace = true
futures.workspace = true
serde_json.workspace = true
