[package]
name = "synaptic-cohere"
description = "Cohere integration for Synaptic: Reranker and DocumentCompressor"
edition.workspace = true
version.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
synaptic-core = { version = "0.3", path = "../synaptic-core" }
synaptic-retrieval = { version = "0.3", path = "../synaptic-retrieval", optional = true }

[features]
default = []
retrieval = ["dep:synaptic-retrieval"]

[dev-dependencies]
tokio.workspace = true
