[package]
name = "synaptic-deep"
version.workspace = true
edition = "2021"
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Deep agent harness for Synaptic — planning, filesystem, subagents, skills, memory"

[dependencies]
async-trait.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true, features = ["fs", "process"] }
tracing.workspace = true
regex.workspace = true
synaptic-core.workspace = true
synaptic-macros.workspace = true
synaptic-middleware.workspace = true
synaptic-graph = { version = "0.3", path = "../synaptic-graph" }
synaptic-tools = { version = "0.3", path = "../synaptic-tools" }
synaptic-config = { version = "0.3", path = "../synaptic-config", optional = true }
synaptic-models = { version = "0.3", path = "../synaptic-models", optional = true }
synaptic-openai = { version = "0.3", path = "../synaptic-openai", optional = true }
synaptic-anthropic = { version = "0.3", path = "../synaptic-anthropic", optional = true }
synaptic-gemini = { version = "0.3", path = "../synaptic-gemini", optional = true }
synaptic-ollama = { version = "0.3", path = "../synaptic-ollama", optional = true }
synaptic-mcp = { version = "0.3", path = "../synaptic-mcp", optional = true }

[features]
filesystem = []
openai-provider = ["dep:synaptic-openai"]
anthropic-provider = ["dep:synaptic-anthropic"]
gemini-provider = ["dep:synaptic-gemini"]
ollama-provider = ["dep:synaptic-ollama"]
all-providers = ["openai-provider", "anthropic-provider", "gemini-provider", "ollama-provider"]
config-builder = ["dep:synaptic-config", "dep:synaptic-models", "dep:synaptic-mcp", "openai-provider"]

[dev-dependencies]
tokio.workspace = true
synaptic-models = { version = "0.3", path = "../synaptic-models" }
synaptic-store = { version = "0.3", path = "../synaptic-store" }
