[package]
name = "synaptic-lark"
description = "Feishu/Lark integration for Synaptic: document loader, Bitable tool, message tool"
edition.workspace = true
version.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
async-trait.workspace = true
reqwest = { workspace = true }
serde_json.workspace = true
serde.workspace = true
tokio = { workspace = true }
tracing = { workspace = true }
synaptic-core = { version = "0.2", path = "../synaptic-core" }

[dev-dependencies]
tokio.workspace = true
