[package]
name = "synaptic-mongodb"
description = "MongoDB Atlas Vector Search integration for Synaptic"
edition.workspace = true
version.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
synaptic-core = { version = "0.2", path = "../synaptic-core" }
mongodb = "3"
bson = "2"
futures.workspace = true

[dev-dependencies]
tokio.workspace = true
