[package]
name = "synaptic-session"
description = "Store-backed session lifecycle management for the Synaptic AI agent framework"
edition.workspace = true
version.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
synaptic-core = { version = "0.3", path = "../synaptic-core" }
synaptic-graph = { version = "0.3", path = "../synaptic-graph" }
synaptic-memory = { version = "0.3", path = "../synaptic-memory" }

[dev-dependencies]
tokio.workspace = true
synaptic-store = { version = "0.3", path = "../synaptic-store" }
