[package]
name = "synaptic-sqlite"
description = "SQLite LLM cache integration for Synaptic"
edition.workspace = true
version.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
async-trait.workspace = true
serde_json.workspace = true
synaptic-core = { version = "0.2", path = "../synaptic-core" }
rusqlite = { version = "0.32", features = ["bundled"] }
tokio.workspace = true

[dev-dependencies]
tokio.workspace = true
