[package]
name = "synaptic-sqlite"
description = "SQLite integration for Synaptic — cache, checkpointer, store, and vector store"
edition.workspace = true
version.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
async-trait.workspace = true
serde_json.workspace = true
synaptic-core = { version = "0.3", path = "../synaptic-core" }
synaptic-graph = { version = "0.3", path = "../synaptic-graph" }
rusqlite = { version = "0.32", features = ["bundled"] }
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
serde_json.workspace = true
synaptic-graph = { version = "0.3", path = "../synaptic-graph" }
synaptic-embeddings = { version = "0.3", path = "../synaptic-embeddings" }
