[package]
name = "condenser_demo"
edition.workspace = true
version.workspace = true
publish = false

[[bin]]
name = "condenser_demo"
path = "src/main.rs"

[dependencies]
synaptic = { version = "0.3", path = "../../crates/synaptic", features = ["condenser", "model-utils"] }
tokio = { workspace = true }
