[package]
name = "lark_streaming_bot"
edition.workspace = true
version.workspace = true
publish = false

[[bin]]
name = "lark_streaming_bot"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
async-trait.workspace = true
synaptic = { version = "0.3", path = "../../crates/synaptic", features = ["lark", "lark-bot"] }
