[package]
name = "macros_showcase"
edition.workspace = true
version.workspace = true
publish = false

[dependencies]
async-trait.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
synaptic = { version = "0.3", path = "../../crates/synaptic", features = ["agent", "macros"] }
