[package]
name = "security_demo"
edition.workspace = true
version.workspace = true
publish = false

[[bin]]
name = "security_demo"
path = "src/main.rs"

[dependencies]
synaptic = { version = "0.3", path = "../../crates/synaptic", features = ["middleware"] }
serde_json.workspace = true
tokio = { workspace = true }
