[package]
name = "tool_filter_demo"
edition.workspace = true
version.workspace = true
publish = false

[[bin]]
name = "tool_filter_demo"
path = "src/main.rs"

[dependencies]
synaptic = { version = "0.3", path = "../../crates/synaptic", features = ["tools"] }
serde_json.workspace = true
tokio = { workspace = true }
