[package]
name = "volcengine_test"
edition.workspace = true
version.workspace = true
publish = false

[dependencies]
async-trait.workspace = true
futures.workspace = true
serde_json.workspace = true
tokio.workspace = true
synaptic = { version = "0.3", path = "../../crates/synaptic", features = ["agent", "macros", "parsers"] }
